# src/Entity/BinHistoric.php
@@ -4,9 +4,11 @@ namespace App\Entity;
 
 use Doctrine\ORM\Mapping as ORM;
 use Ramsey\Uuid\Uuid;
+use OpenApi\Annotations as OA;
 
 /**
  * @ORM\Entity(repositoryClass="App\Repository\BinHistoricRepository")
+ * @OA\Schema(schema="bin_historic", required={"id", "uuid_bin", "created_at", "pickup_at", "empty"})
  */
 class BinHistoric
 {
@@ -16,27 +18,32 @@ class BinHistoric
      * @ORM\Column(type="uuid", unique=true)
      * @ORM\GeneratedValue(strategy="CUSTOM")
      * @ORM\CustomIdGenerator(class="Ramsey\Uuid\Doctrine\UuidGenerator")
+     * @OA\Property(type="integer")
      */
     private $id;
 
     /**
      * @ORM\ManyToOne(targetEntity="App\Entity\Bin", inversedBy="bin_historics")
      * @ORM\JoinColumn(nullable=false)
+     * @OA\Property(type="integer")
      */
     private $uuid_bin;
 
     /**
      * @ORM\Column(type="datetime")
+     * @OA\Property(type="string", format="date-time")
      */
     private $created_at;
 
     /**
      * @ORM\Column(type="datetime", nullable=true)
+     * @OA\Property(type="string", format="date-time")
      */
     private $pickup_date;
 
     /**
      * @ORM\Column(type="boolean", nullable=true)
+     * @OA\Property(type="boolean", nullable=true)
      */
     private $empty;
 
