# src/Entity/CityBin.php
@@ -4,9 +4,11 @@ namespace App\Entity;
 
 use Doctrine\ORM\Mapping as ORM;
 use Ramsey\Uuid\Uuid;
+use OpenApi\Annotations as OA;
 
 /**
  * @ORM\Entity(repositoryClass="App\Repository\CityBinRepository")
+ * @OA\Schema(schema="citybin", required={"id", "uuid_bin", "uuid_city"})
  */
 class CityBin
 {
@@ -16,18 +18,21 @@ class CityBin
      * @ORM\Column(type="uuid", unique=true)
      * @ORM\GeneratedValue(strategy="CUSTOM")
      * @ORM\CustomIdGenerator(class="Ramsey\Uuid\Doctrine\UuidGenerator")
+     * @OA\Property(type="integer")
      */
     private $id;
 
     /**
      * @ORM\ManyToOne(targetEntity="App\Entity\Bin", inversedBy="cityBins")
      * @ORM\JoinColumn(nullable=false)
+     * @OA\Property(type="integer")
      */
     private $uuid_bin;
 
     /**
      * @ORM\ManyToOne(targetEntity="App\Entity\City", inversedBy="cityBins")
      * @ORM\JoinColumn(nullable=false)
+     * @OA\Property(type="integer")
      */
     private $uuid_city;
 
