# src/Entity/Users.php
@@ -6,11 +6,13 @@ use Doctrine\Common\Collections\ArrayCollection;
 use Doctrine\Common\Collections\Collection;
 use Doctrine\ORM\Mapping as ORM;
 use Ramsey\Uuid\Uuid;
+use OpenApi\Annotations as OA;
 
 
 
 /**
  * @ORM\Entity(repositoryClass="App\Repository\UsersRepository")
+ * @OA\Schema(schema="users", required={"id", "role", "name", "created_at", "updated_at", "adress", "password", "token", "mail", "is_enable", "user_bin"})
  */
 class Users
 {
@@ -20,56 +22,67 @@ class Users
      * @ORM\Column(type="uuid", unique=true)
      * @ORM\GeneratedValue(strategy="CUSTOM")
      * @ORM\CustomIdGenerator(class="Ramsey\Uuid\Doctrine\UuidGenerator")
+     * @OA\Property(type="integer")
      */
     private $id;
 
     /**
      * @ORM\Column(type="string", length=100)
+     * @OA\Property(type="string", maxLength=100)
      */
     private $role;
 
     /**
      * @ORM\Column(type="string", length=255, nullable=true)
+     * @OA\Property(type="string", maxLength=255, nullable=true)
      */
     private $name;
 
     /**
      * @ORM\Column(type="datetime")
+     * @OA\Property(type="string", format="date-time")
      */
     private $created_at;
 
     /**
      * @ORM\Column(type="datetime", nullable=true)
+     * @OA\Property(type="string", format="date-time", nullable=true)
      */
     private $updated_at;
 
     /**
      * @ORM\Column(type="string", length=255, nullable=true)
+     * @OA\Property(type="string", maxLength=255, nullable=true)
      */
     private $adress;
 
     /**
      * @ORM\Column(type="string", length=255)
+     * @OA\Property(type="string", maxLength=255)
      */
     private $password;
 
     /**
      * @ORM\Column(type="string", length=255)
+     * @OA\Property(type="string", maxLength=255)
      */
     private $token;
 
     /**
      * @ORM\Column(type="string", length=255)
+     * @OA\Property(type="string", maxLength=255)
      */
     private $mail;
 
     /**
      * @ORM\Column(type="boolean")
+     * @OA\Property(type="boolean")
      */
     private $is_enable;
 
     /**
      * @ORM\OneToMany(targetEntity="App\Entity\UsersBin", mappedBy="uuid_user")
+     * @OA\Property(type="integer")
      */
     private $user_bin;
 
